--- a/app/src/main/res/layout/multimedia_element.xml
+++ b/app/src/main/res/layout/multimedia_element.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="100dp"
+    android:background="@color/grey_background"
     android:orientation="horizontal">
 
     <ImageView
@@ -10,8 +11,10 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="0.35"
+        android:contentDescription="@string/iv_type_content_descriptor"
         android:padding="8dp"
-        android:contentDescription="@string/iv_type_content_descriptor"/>
+        android:tint="@color/grey_image_tint"
+        tools:src="@drawable/ic_image_black_24dp" />
 
     <TextView
         android:id="@+id/tv_name"
@@ -21,6 +24,7 @@
         android:layout_weight="1"
         android:gravity="start"
         android:padding="8dp"
+        android:textColor="@color/grey_text_color"
         tools:text="JPEG_20171025_000154_2026318342.jpg" />
 
 </LinearLayout>
