--- a/app/src/main/res/layout/multimedia_element_detail_view.xml
+++ b/app/src/main/res/layout/multimedia_element_detail_view.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
+    <FrameLayout
+        android:id="@+id/fl_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"/>
