--- a/app/src/main/res/layout/gallery_view.xml
+++ b/app/src/main/res/layout/gallery_view.xml
@@ -1,23 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey_background"
-    android:orientation="vertical"
-    tools:context="ibanez.jacob.cat.xtec.ioc.gallery.presenter.GalleryPresenter">
+    android:background="@color/grey_background">
 
-    <ScrollView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_gallery"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_gallery"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </ScrollView>
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -50,4 +41,4 @@
             app:srcCompat="@android:drawable/presence_video_online" />
     </LinearLayout>
 
-</LinearLayout>
+</FrameLayout>
